--- a/app/globals.css
+++ b/app/globals.css
@@ -17,6 +17,14 @@
     }
 } */
 
+body {
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  letter-spacing: -0.011em;
+  font-size: 16px;
+  line-height: 1.5;
+}
+
 @keyframes blob {
    0% { transform: translate(0px, 0px) scale(1); }
    33% { transform: translate(30px, -50px) scale(1.1); }
